--- a/README
+++ b/README
@@ -3,8 +3,8 @@ Quick Start
 
 1) Download project
 2. Get Saplo API keys: http://saplo.com/signup 
-2) Open terminal and 'cd' into the target directory
-3) Run: java -jar try-sentiment-0.0.1-SNAPSHOT-jar-with-dependencies.jar --apikey=YOURAPIKEY --secretkey=YOURSECRETKEY
+2) Open terminal and 'cd' into the project directory.
+3) Run: java -jar target/try-sentiment-0.0.1-SNAPSHOT-jar-with-dependencies.jar --apikey=YOURAPIKEY --secretkey=YOURSECRETKEY
 4) Check output.csv file for result
 
 
