--- a/README
+++ b/README
@@ -11,7 +11,8 @@ Quick Start
 Slightly more advanced
 ------------------------
 
-The application takes the texts stored in target/input.csv. You can change the text, though it is important you use the following structure:
+The application takes the texts stored in target/input.csv. 
+You can change the text, though it is important you use the following structure:
 
 "text","target_word"
 
